fix: z-index search-box

--- a/src/styles/_components.search-box.scss
+++ b/src/styles/_components.search-box.scss
@@ -12,6 +12,7 @@ $input-padding-y: .5rem;
   height: 40px;
   margin: 0;
   box-shadow: 0 2px 2px 0 rgba(0,0,0,.16), 0 0 0 1px rgba(0,0,0,.08);
+  z-index: 1;
 }
 
   .c-search-box__select {
